# messplatz

./: .gitignore  ReadSplitData.m  SerialRead.m  Signaltest.m  bytereader.py  classes.py  main.c  main.py  messplatz.py  package-lock.json  packer.py  plotter.js  pyproject.toml  setup.py  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tablet_reader.py  test_bytearray.py  test_messplatz.py  tmain.py  view.html  ws_emulator.py
data/: README.md
logs/: README.md
messplatz/: __init__.py  log.conf
messplatz/utils/: request_emulator.py  simulate.py  testbench.ipynb
node-server/: index.js  package-lock.json  package.json  plotter.js  view.html  view_am.html
node-server/scripts/: plotter.js
tests/: test_bytearray.py  test_transfer.py  test_units.py
utils/: filter_design.py  simulate.py  ws_emulator.py
