[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(name)s:%(lineno)s)"
log_file = "messplatz/logs/test.log"
log_file_date_format = "%Y-%m-%d_%H-%M-%S"
log_file_format = "%(asctime)s [%(levelname)s] %(message)s (%(name)s:%(lineno)s)"